add G1 tuning